--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 Flask==2.3.3
 requests==2.31.0
 Flask-CORS==4.0.0
+langchain==0.1.20
+langchain-community==0.0.38
+langchain-core==0.1.52
+python-dotenv==1.0.0
