--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - name: Set up SSH key
         env:
-          SSH_PRIVATE_KEY: ${{ secrets.NEW_KEY }}
+          SSH_PRIVATE_KEY: ${{ secrets.KEY }}
         run: |
           mkdir -p ~/.ssh
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/fleetblox_db.pem
